# sketchatone

./: .eslintrc.json  .gitignore  LICENSE  OMNI_MODE_INVESTIGATION.md  README.md  SPECTRUMIZE.md  TESTING_SUMMARY.md  app.html  build-linux.sh  create-deb.sh  create-macos-app.sh  docs.css  eleventy.config.mjs  index.html  package-for-pi.sh  package-lock.json  package.json  playwright.config.ts  playwright.spectrumizer.config.ts  run-sketchatone.command  setup-kiosk-mode.sh  setup-usb-midi-gadget.sh  sketchatone-setup  tsconfig.build.json  tsconfig.cli.json  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.server.config.ts  web.html
.github/workflows/: deploy-docs.yml  test.yml
about/action-rules/: index.html
about/actions-reference/: index.html
about/builds/: index.html
about/chords-and-progressions/: index.html
about/configuration-overview/: index.html
about/configuration-settings/: index.html
about/dashboard/: index.html
about/getting-started/: index.html
about/jack-midi/: index.html
about/midi-input/: index.html
about/node-cli/: index.html
about/note-duration/: index.html
about/note-repeater/: index.html
about/note-velocity/: index.html
about/pitch-bend/: index.html
about/python-cli/: index.html
about/running-overview/: index.html
about/strum-release/: index.html
about/strumming/: index.html
about/stylus-buttons/: index.html
about/tablet-buttons/: index.html
about/transpose/: index.html
about/troubleshooting/: index.html
about/usb-midi-gadget/: index.html
docs/: CNAME  configuration.md  docs.css  index.html  node-cli.md  python-cli.md
docs-src/: index.md
docs-src/_includes/: footer.njk  header.njk  page.njk  side-nav.njk
docs-src/about/: action-rules.md  actions-reference.md  builds.md  changelog.md  chords-and-progressions.md  configuration-overview.md  configuration-settings.md  dashboard.md  getting-started.md  jack-midi.md  node-cli.md  note-duration.md  note-repeater.md  note-velocity.md  pitch-bend.md  python-cli.md  running-overview.md  strum-release.md  strumming.md  stylus-buttons.md  tablet-buttons.md  transpose.md  troubleshooting.md  usb-midi-gadget.md
docs-src/public/: docs.css
downloads/: install-sketchatone.sh  zi4tYTT5  ziF3Tbel
electron/: main.ts  preload.ts
public/configs/: default.json  midi-strummer.json  sample-config-zynthian.json  sample-config.json  strummer-full.json  strummer-sample.json  strummer.json  test-custom-progressions.json  xpdeco640.json
python/: pyproject.toml  sketchatone-linux.spec
python/sketchatone/: __init__.py
python/sketchatone/cli/: __init__.py  event_viewer.py  midi_strummer.py  server.py  strum_event_viewer.py
python/sketchatone/midi/: __init__.py  bridge.py  jack_backend.py  jack_input.py  note_scheduler.py  protocol.py  rtmidi_backend.py  rtmidi_input.py
python/sketchatone/models/: __init__.py  action_rules.py  keyboard_config.py  midi_config.py  midi_strummer_config.py  note.py  parameter_mapping.py  server_config.py  strummer_config.py  strummer_features.py
python/sketchatone/strummer/: __init__.py  actions.py  strummer.py
python/sketchatone/utils/: __init__.py  event_emitter.py  keyboard_listener.py
python/tests/: conftest.py
python/tests/fixtures/: config-flat-format.json  config-nested-format.json
python/tests/helpers/: virtual_midi.py
python/tests/integration/: test_config_loading.py  test_virtual_midi.py
python/tests/mocks/: __init__.py  mock_midi_backend.py
python/tests/unit/: test_actions.py  test_config_file_management.py  test_event_emitter.py  test_midi_backend.py  test_midi_strummer_config.py  test_parameter_mapping.py  test_resolve_device_config_path.py  test_sample.py  test_server.py  test_server_config.py  test_strum_event_viewer.py  test_strummer.py  test_strummer_config.py  test_strummer_features.py
src/: index.ts
src/cli/: electron-ipc-bridge.ts  midi-strummer.ts  server.ts  strum-event-viewer.ts  strummer-websocket-server.ts
src/components/: index.ts
src/controllers/: index.ts  tablet-interaction-controller.ts
src/core/: actions.ts  index.ts  strummer.ts
src/midi/: bridge.ts  index.ts  protocol.ts  rtmidi-backend.ts  rtmidi-input.ts
src/mockbytes/: index.ts
src/models/: action-rules.ts  index.ts  midi-strummer-config.ts  note.ts  parameter-mapping.ts  strummer-config.ts  strummer-features.ts
src/types/: index.ts  tablet-events.ts
test/: README.md  setup.ts
(+78 files in other folders)
